tests/baselines/reference/tupleTypeSpread.errors.txt
tests/cases/compiler/tupleTypeSpread.ts(2,52): error TS2714: Tuple type spreads may only be created from tuple types.


==== tests/cases/compiler/tupleTypeSpread.ts (1 errors) ====
    type a = [1, ...[2]];
    type Combine<Head, Tail extends any[]> = [Head, ...Tail];
                                                       ~~~~
!!! error TS2714: Tuple type spreads may only be created from tuple types.
    type b = Combine<1, [2, 3]>;
    